--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,26 @@
 
 
     <meta name="theme-color" content="#fafafa">
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(93785216, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/93785216" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body class="body">
@@ -26,7 +46,7 @@
                 Tsoy Mikhail
             </h1>
             <h2 class="header__subtitle">
-                Versatile Frontend Developer & ex-UX/UI Designer &#128205; Belgrade, Serbia &#127479;&#127480;
+                Versatile Frontend Developer &amp;&nbsp;ex-UX/UI Designer &#128205; Belgrade, Serbia &#127479;&#127480;
             </h2>
         </div>
     </header>
@@ -64,8 +84,7 @@
         <li class="grid__cell grid__cell_type_get-in-touch">
             <a class="card card_type_red card_type_grid card_type_contacts">
                 <h2 class="card__header">
-
-                    Get in touch
+                    Get in&nbsp;touch
                 </h2>
                 <i class="card__icon">
 
@@ -81,9 +100,8 @@
             </h2>
 
             <p class="card__paragraph">
-                Hi, I’m Tsoy Mikhail, a frontend developer with over 1 year of experience and ex-UX/UI designer. I’m
-                passionate about
-                creating beautiful and user-friendly interfaces.
+                Hi, I&rsquo;m Tsoy Mikhail, a&nbsp;frontend developer with over 1&nbsp;year of&nbsp;experience and
+                ex-UX/UI designer. I&rsquo;m passionate about creating beautiful and user-friendly interfaces.
             </p>
         </div>
     </section>
@@ -127,20 +145,21 @@
         <p class="key-skills__chip key-skills__chip_type_soft"><i
                 class="icon icon__key-skills icon_type_english"></i>English(B2)</p>
         <p class="key-skills__chip key-skills__chip_type_soft"><i
-                class="icon icon__key-skills icon_type_russian"></i>Russian(native)</p>
+                class="icon icon__key-skills icon_type_russian"></i>Russian</p>
         <p class="key-skills__chip key-skills__chip_type_soft">Everything good and nothing bad</p>
 
     </section>
     <section class="portfolio">
         <div class="card card_type_gray ">
             <h2 class="card__subheader">Portfolio</h2>
-            <p class="card__paragraph">Exploring My Creative Endeavors: A Collection of Projects and Designs</p>
+            <p class="card__paragraph">Exploring My&nbsp;Creative Endeavors: A&nbsp;Collection of&nbsp;Projects and
+                Designs</p>
         </div>
 
         <ul class="portfolio__wrapper">
             <li class="card card_type_blue">
                 <h3 class="card__header">Movie explorer</h3>
-                <p class="card__sub-paragraph">Sometimes hosting is too expensive…</p>
+                <p class="card__sub-paragraph">Sometimes hosting is&nbsp;too expensive...</p>
                 <div class="card__button-wrapper">
                     <button onclick="window.open('https://github.com/mtsoy123/movies-explorer-frontend')"
                         class=" card__button card__button_type_blue">Github &#8599;</button>
@@ -164,7 +183,7 @@
 
             <li class="card card_type_green">
                 <h3 class="card__header">Portfolio</h3>
-                <p class="card__sub-paragraph">Does it count?</p>
+                <p class="card__sub-paragraph">Does it&nbsp;count?</p>
                 <div class="card__button-wrapper">
                     <button onclick="window.open('https://github.com/mtsoy123/portfolio2023')"
                         class=" card__button card__button_type_green">Github &#8599;</button>
@@ -172,7 +191,7 @@
             </li>
             <li class="card card_type_red">
                 <h3 class="card__header">Mesto</h3>
-                <p class="card__sub-paragraph">What if Instagram had only one shared feed?</p>
+                <p class="card__sub-paragraph">What if&nbsp;Instagram had only one shared feed?</p>
 
                 <div class="card__button-wrapper">
                     <button class="card__button card__button_type_red"
@@ -204,7 +223,7 @@
             </li> -->
             <li class="card card_type_green">
                 <h3 class="card__header">Target</h3>
-                <p class="card__sub-paragraph">"Aiming for Excellence</p>
+                <p class="card__sub-paragraph">Aiming for Excellence</p>
                 <div class="card__button-wrapper">
                     <button class="card__button card__button_type_green"
                         onclick="window.open('https://github.com/mtsoy123/target-langing')">Github &#8599;</button>
@@ -213,7 +232,7 @@
                 </div>
             </li>
             <li class="card card_type_blue">
-                <h3 class="card__header">How to learn?</h3>
+                <h3 class="card__header">How to&nbsp;learn?</h3>
                 <p class="card__sub-paragraph">Easy &#128526;</p>
                 <div class="card__button-wrapper">
                     <button class="card__button card__button_type_blue"
@@ -225,7 +244,7 @@
 
             <li class="card card_type_green">
                 <h3 class="card__header">Russian travel</h3>
-                <p class="card__sub-paragraph">Party like a russian</p>
+                <p class="card__sub-paragraph">Party like a&nbsp;russian</p>
                 <div class="card__button-wrapper">
                     <button class="card__button card__button_type_green"
                         onclick="window.open('https://github.com/mtsoy123/russian-travel')">Github &#8599;</button>
@@ -244,7 +263,7 @@
         </div>
         <div class="card card_type_gray">
             <h2 class="card__paragraph">
-                My story so far: frontend development and UX/UI design
+                My&nbsp;story so&nbsp;far: frontend development and UX/UI design
             </h2>
         </div>
 
@@ -267,13 +286,15 @@
                     </div>
                 </div>
                 <p class="card card__experience card_type_light card_type_hidden">
-                    As a freelance frontend developer, I designed and developed fully-adaptive landing pages for small
-                    customers using HTML,
-                    SCSS, and vanilla JavaScript, while following best practices in frontend development. I created
-                    maintainable SCSS-styles
-                    and worked with BEM to ensure the maintainability of the codebase. I communicated effectively with
-                    customers, quickly
-                    immersed into new subject areas, and completed tasks quickly and successfully.
+                    As&nbsp;a&nbsp;freelance frontend developer, I&nbsp;designed and developed fully-adaptive landing
+                    pages for small
+                    customers using HTML, SCSS, and vanilla JavaScript, while following best practices in&nbsp;frontend
+                    development.
+                    I&nbsp;created maintainable SCSS-styles and worked with BEM to&nbsp;ensure the maintainability
+                    of&nbsp;the codebase.
+                    I&nbsp;communicated effectively with customers, quickly immersed into new subject areas, and
+                    completed tasks quickly and
+                    successfully.
                 </p>
             </li>
             <li class="experience__job">
@@ -283,7 +304,7 @@
                             Naumen
                         </h2>
                         <p class="card__date">
-                            03/2021 — 12/2021
+                            03/2021&nbsp;&mdash; 12/2021
                         </p>
                     </div>
                     <div class="card__experience-wrapper">
@@ -294,12 +315,15 @@
                     </div>
                 </div>
                 <p class="card card__experience card_type_light card_type_hidden">
-                    As a UX/UI Designer at NAUMEN, I created a user-friendly interface for a service desk product. I
-                    collaborated with
-                    analysts, supported the design system, and focused on crafting an informative dashboard and
-                    applications. I also maintained an organized knowledge base for design materials. It was a
-                    demanding gig,
-                    requiring attention to detail and juggling multiple projects, but I rocked it!
+                    As&nbsp;a&nbsp;UX/UI Designer at&nbsp;NAUMEN, I&nbsp;created a&nbsp;user-friendly interface for
+                    a&nbsp;service desk
+                    product. I&nbsp;collaborated with analysts, supported the design system, and focused
+                    on&nbsp;crafting
+                    an&nbsp;informative dashboard and applications. I&nbsp;also maintained an&nbsp;organized knowledge
+                    base for design
+                    materials. It&nbsp;was a&nbsp;demanding gig, requiring attention to&nbsp;detail and juggling
+                    multiple projects,
+                    but&nbsp;I rocked&nbsp;it!
                 </p>
             </li>
             <li class="experience__job">
@@ -309,7 +333,7 @@
                             CRP-lab
                         </h2>
                         <p class="card__date">
-                            05/2020 — 12/2020
+                            05/2020&nbsp;&mdash;12/2020
                         </p>
                     </div>
                     <div class="card__experience-wrapper">
@@ -319,15 +343,17 @@
                     </div>
                 </div>
                 <p class="card card__experience card_type_light card_type_hidden">
-                    As a UX/UI Designer at the Center of Reactive Programming, I had the exciting task of creating
-                    interfaces for diverse
-                    projects. I tackled complex subjects like SPDM and CRM
-                    systems for
-                    universities and European banks. From gathering requirements to designing wireframes, prototypes,
-                    icons, and graphics, I
-                    handled it all. Collaborating with colleagues across time zones, I juggled multiple projects. In a
-                    fast-paced environment, I embraced the challenge, solved
-                    problems, and nailed it!
+                    As&nbsp;a&nbsp;UX/UI Designer at&nbsp;the Center of&nbsp;Reactive Programming, I&nbsp;had the
+                    exciting task
+                    of&nbsp;creating
+                    interfaces for diverse projects. I&nbsp;tackled complex subjects like SPDM and CRM systems for
+                    universities and European
+                    banks. From gathering requirements to&nbsp;designing wireframes, prototypes,
+                    icons, and graphics, I&nbsp;handled it&nbsp;all. Collaborating with colleagues across time zones,
+                    I&nbsp;juggled
+                    multiple projects. In&nbsp;a&nbsp;fast-paced environment, I&nbsp;embraced the challenge, solved
+                    problems, and
+                    nailed&nbsp;it!
                 </p>
             </li>
             <li class="experience__job">
@@ -337,7 +363,7 @@
                             EPAM
                         </h2>
                         <p class="card__date">
-                            01/2018 — 01/2020 </p>
+                            01/2018&nbsp;&mdash;01/2020 </p>
                     </div>
                     <div class="card__experience-wrapper">
                         <p class="card__position">
@@ -346,13 +372,14 @@
                     </div>
                 </div>
                 <p class="card card__experience card_type_light card_type_hidden">
-                    As an Experience Designer at EPAM Systems, I had the awesome job of designing interfaces and
-                    gathering requirements from
-                    customers. I got to dive into UX research, conducting interviews with users, analyzing
-                    personalities, and checking out
-                    the competition. From wireframes and prototypes to creating icons and graphics, I made sure
-                    everything looked and felt
-                    user-friendly and intuitive.
+                    As&nbsp;an&nbsp;Experience Designer at&nbsp;EPAM Systems, I&nbsp;had the awesome job
+                    of&nbsp;designing interfaces and
+                    gathering requirements from customers. I&nbsp;got to&nbsp;dive into&nbsp;UX research, conducting
+                    interviews with users,
+                    analyzing
+                    personalities, and checking out the competition. From wireframes and prototypes to&nbsp;creating
+                    icons and graphics,
+                    I&nbsp;made sure everything looked and felt user-friendly and intuitive.
                 </p>
             </li>
         </ul>
@@ -360,9 +387,9 @@
 
     <section class="contacts">
         <div class="card card_type_gray card_type_contacts">
-            <h2 class="card__subheader">Get in touch</h2>
-            <p class="card__paragraph">Do you have a question, an idea, or a project you need help with? Let’s get in
-                touch</p>
+            <h2 class="card__subheader">Get in&nbsp;touch</h2>
+            <p class="card__paragraph">Do&nbsp;you have a&nbsp;question, an&nbsp;idea, or&nbsp;a&nbsp;project you need
+                help with? Let&rsquo;s get in&nbsp;touch</p>
             <ul class="card__link-wrapper">
                 <li class="card__contacts">
                     <a href="mailto:mikhail.tsoy123@gmail.com" class="card__link">
