--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#fafafa">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
