--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="">
 
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
