--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                 Tsoy Mikhail
             </h1>
             <h2 class="header__subtitle">
-                Versatile Frontend Developer &amp;&nbsp;ex-UX/UI Designer &#128205; Belgrade, Serbia &#127479;&#127480;
+                Versatile Frontend Developer &amp;&nbsp;ex-UX/UI Designer
             </h2>
         </div>
     </header>
